--- a/src/gui/ThuocTinhDanhMuc_GUI.form
+++ b/src/gui/ThuocTinhDanhMuc_GUI.form
@@ -52,7 +52,8 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="824" height="600"/>
+            <minimum-size width="-1" height="200"/>
+            <preferred-size width="1100" height="800"/>
           </grid>
         </constraints>
         <properties/>
