--- a/src/gui/NCCKVLT/NCC.form
+++ b/src/gui/NCCKVLT/NCC.form
@@ -108,7 +108,12 @@
                     <preferred-size width="200" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <model>
+                    <item value="ĐANG_GIAO_DỊCH"/>
+                    <item value="NGỪNG_HỢP_TÁC"/>
+                  </model>
+                </properties>
               </component>
               <component id="ebea5" class="javax.swing.JButton" binding="btnTimKiem">
                 <constraints>
@@ -269,7 +274,12 @@
                     <constraints>
                       <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <model>
+                        <item value="ĐANG_GIAO_DỊCH"/>
+                        <item value="NGỪNG_HỢP_TÁC"/>
+                      </model>
+                    </properties>
                   </component>
                 </children>
               </grid>
