Fix: Rename NamSinh to NgaySinh in NHANVIEN (DAO + SQL updated)

--- a/src/gui/KhachHang_GUI.form
+++ b/src/gui/KhachHang_GUI.form
@@ -46,7 +46,7 @@
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
-                  <component id="57dc0" class="javax.swing.JButton" binding="btnXuatExcel">
+                  <component id="57dc0" class="javax.swing.JButton" binding="btn_XuatExcel">
                     <constraints>
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -54,7 +54,7 @@
                       <text value="Xuất excel"/>
                     </properties>
                   </component>
-                  <component id="a8c60" class="javax.swing.JButton" binding="btnNhapExcel">
+                  <component id="a8c60" class="javax.swing.JButton" binding="btn_NhapExcel">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -100,14 +100,6 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="2498d" class="javax.swing.JButton" binding="btn_hang">
-                <constraints>
-                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Hạng"/>
-                </properties>
-              </component>
               <component id="a6cce" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -128,6 +120,14 @@
                 </constraints>
                 <properties>
                   <text value="Tìm kiếm"/>
+                </properties>
+              </component>
+              <component id="b44c7" class="javax.swing.JComboBox" binding="cmb_chonHang">
+                <constraints>
+                  <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <model/>
                 </properties>
               </component>
             </children>
@@ -313,10 +313,13 @@
                           <text value="Nam"/>
                         </properties>
                       </component>
-                      <component id="dadae" class="com.toedter.calendar.JDateChooser" binding="JDate_ngaySinh" custom-create="true">
+                      <component id="651dc" class="javax.swing.JTextField" binding="txt_ngaySin">
                         <constraints>
-                          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
                         </constraints>
+                        <properties/>
                       </component>
                     </children>
                   </grid>
