--- a/src/gui/NhanVien_GUI.form
+++ b/src/gui/NhanVien_GUI.form
@@ -296,10 +296,13 @@
                           <text value="Nam"/>
                         </properties>
                       </component>
-                      <component id="fef47" class="com.toedter.calendar.JDateChooser" binding="JDate_ngaySinh" custom-create="true">
+                      <component id="e7cc" class="javax.swing.JTextField" binding="txt_namSinh">
                         <constraints>
-                          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
                         </constraints>
+                        <properties/>
                       </component>
                     </children>
                   </grid>
