--- a/src/gui/QuanLyKhuyenMai_GUI.form
+++ b/src/gui/QuanLyKhuyenMai_GUI.form
@@ -330,14 +330,6 @@
                   <text value="Áp dụng cho Danh mục"/>
                 </properties>
               </component>
-              <component id="2e568" class="javax.swing.JTextField" binding="txtApDungDanhMuc">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
               <component id="a0f2a" class="javax.swing.JLabel" binding="labelTrangThai">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -360,17 +352,21 @@
                   <text value="Áp dụng cho Sản phẩm"/>
                 </properties>
               </component>
-              <component id="db3b8" class="javax.swing.JTextField" binding="txtApDungSanPham">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
               <component id="c4f05" class="javax.swing.JComboBox" binding="cmbDoiTuongApDung">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="8ea0c" class="javax.swing.JComboBox" binding="cmbApDungDanhMuc">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="fcf51" class="javax.swing.JComboBox" binding="cmbApDungSanPham">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
