--- a/src/gui/QuanLyVoucher_GUI.form
+++ b/src/gui/QuanLyVoucher_GUI.form
@@ -101,13 +101,13 @@
             </constraints>
             <properties/>
           </component>
-          <component id="e5679" class="javax.swing.JComboBox" binding="cmbTrangThai">
+          <component id="e5679" class="javax.swing.JComboBox" binding="cmbLocTrangThai">
             <constraints>
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
-          <component id="334aa" class="javax.swing.JLabel" binding="labelTrangThai">
+          <component id="334aa" class="javax.swing.JLabel" binding="labelLocTrangThai">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -352,7 +352,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="77798" class="javax.swing.JLabel">
+              <component id="77798" class="javax.swing.JLabel" binding="labelTrangThai">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -360,7 +360,7 @@
                   <text value="Trạng thái"/>
                 </properties>
               </component>
-              <component id="df049" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <component id="df049" class="javax.swing.JComboBox" binding="cmbTrangThai">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
